; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/omap/extr_lcdc.c_set_load_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/omap/extr_lcdc.c_set_load_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OMAP_LCDC_CONTROL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @set_load_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_load_mode(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @OMAP_LCDC_CONTROL, align 4
  %5 = call i32 @omap_readl(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = and i32 %6, -3145729
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %2, align 4
  switch i32 %8, label %16 [
    i32 129, label %9
    i32 130, label %12
    i32 128, label %15
  ]

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = or i32 %10, 1048576
  store i32 %11, i32* %3, align 4
  br label %18

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = or i32 %13, 2097152
  store i32 %14, i32* %3, align 4
  br label %18

15:                                               ; preds = %1
  br label %18

16:                                               ; preds = %1
  %17 = call i32 (...) @BUG()
  br label %18

18:                                               ; preds = %16, %15, %12, %9
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @OMAP_LCDC_CONTROL, align 4
  %21 = call i32 @omap_writel(i32 %19, i32 %20)
  ret void
}

declare dso_local i32 @omap_readl(i32) #1

declare dso_local i32 @BUG(...) #1

declare dso_local i32 @omap_writel(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
